# bayesian_statistics_for_computational_biology

./: .gitignore  pyproject.toml  readme.md
data/: metropolis_hastings_example.csv  names.json
docs/: _quarto.yml  after_mcmc.ipynb  bibliography.bib  hierarchical_models.ipynb  index.html  index.ipynb  index.md  introduction_to_bayesian_inference.html  introduction_to_bayesian_inference.ipynb  mcmc_and_stan.html  mcmc_and_stan.ipynb  metropolis-hastings.html  metropolis-hastings.ipynb  odes.ipynb  regression.ipynb  search.json  week1.html  week1.ipynb  week1.md  week2.html  week2.ipynb  week3.html  week3.ipynb  week5.ipynb  week5.md  workflow.html  workflow.ipynb
docs/site_libs/bootstrap/: bootstrap.min.css
materials/: Untitled.ipynb  _quarto.yml  bibliography.bib  hierarchical_models.qmd  index.md  mcmc_and_stan.md  metropolis-hastings.qmd  odes.md  odes.qmd  regression.qmd  week1.md  week2.md  week3.md  week3.qmd  week5.qmd  workflow.md
materials/_book/: index.html  search.json
materials/_site/: index.html  references.html  search.json  week1.html
slides/: index.html  search.json  week1.html  week2.html
src/stan/: monod.stan  pipette.stan  plushies-nc.stan  plushies.stan
