[project]
name = "bayesian_statistics_for_computational_biology"
version = "0.0.1"
description = "Default template for PDM package"
authors = [
    {name = "Teddy Groves", email = "groves.teddy@gmail.com"},
]
dependencies = [
    "arviz>=0.17.0",
    "cmdstanpy>=1.2.1",
    "jupyter>=1.0.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
